--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,11 +9,31 @@ svg {
     background-color: #a7a7a7;
 }
 a#gender {
-    position: absolute;
     font-family: Segoe UI, Arial, Verdana, sans-serif;
     text-align: center;
     width: 100%;
-    bottom: 10%;
+    bottom: 5%;
     font-size: 5em;
     text-shadow: 0.25vw 0.25vw 0.5vw #00000080;
+}
+
+a#button {
+    font-family: Segoe UI, Arial, Verdana, sans-serif;
+    text-align: center;
+    width: 100%;
+    bottom: 2.5%;
+    font-size: 1;
+    color: #00000040;
+    text-transform: uppercase;
+    text-shadow: 0.25vw 0.25vw 0.5vw #00000080;
+}
+
+a#button:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: #0000ff80;
+}
+
+a.text {
+    position: absolute;
 }
